[gd_scene load_steps=28 format=2]

[ext_resource path="res://textures/Bosses.png" type="Texture" id=1]
[ext_resource path="res://Hitbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://enemies/Enemy.gd" type="Script" id=3]
[ext_resource path="res://bosses/Dracula.gd" type="Script" id=4]
[ext_resource path="res://textures/CrusherMask.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 11.5, 20 )

[sub_resource type="Gradient" id=23]
offsets = PoolRealArray( 0, 0.52, 1 )
colors = PoolColorArray( 0.878431, 0.172549, 0, 1, 0.873047, 0.675567, 0.409241, 1, 0.952941, 0.878431, 0.780392, 0 )

[sub_resource type="PhysicsMaterial" id=21]
bounce = 0.3

[sub_resource type="CapsuleShape2D" id=1]
radius = 4.0
height = 6.0

[sub_resource type="Animation" id=12]
resource_name = "Dematerialize"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "teleport"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Body:collision_mask")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Head/Hitbox:collision_mask")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=22]
resource_name = "Dissolve"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Light2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -110 ), Vector2( 0, -64 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Light2D/CPUParticles2D:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=5]
resource_name = "Fire"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 8, 9 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "fire"
} ]
}

[sub_resource type="Animation" id=17]
resource_name = "Materialize"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body/Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Body:collision_mask")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Head/Hitbox:collision_mask")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Head:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body:collision_mask")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Body:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Head/Hitbox:collision_mask")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Body/Sprite:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 8 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath(".:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Light2D:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -109 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Light2D/CPUParticles2D:emitting")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=3]
resource_name = "Spawn"
length = 5.4
tracks/0/type = "value"
tracks/0/path = NodePath("Head:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2.5, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 8 ), Vector2( 0, 8 ), Vector2( 0, -48 ), Vector2( 0, -48 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body:collision_mask")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 5.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 6 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Body:modulate")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2.5, 3, 3.6, 3.7, 3.8, 3.9, 4, 4.1, 4.2, 4.3, 4.4, 4.5, 4.6, 4.7, 4.8, 4.9, 5, 5.1, 5.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Head/Hitbox:collision_mask")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 5.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 4 ]
}

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "Dematerialize"

[sub_resource type="AnimationNodeAnimation" id=6]
animation = "Fire"

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "Materialize"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "RESET"

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "Spawn"

[sub_resource type="AnimationNodeStateMachineTransition" id=11]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=14]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=16]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=19]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=20]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachine" id=9]
states/Dematerialize/node = SubResource( 15 )
states/Dematerialize/position = Vector2( 684, 240 )
states/Fire/node = SubResource( 6 )
states/Fire/position = Vector2( 511, 112 )
states/Materialize/node = SubResource( 18 )
states/Materialize/position = Vector2( 292, 246 )
states/RESET/node = SubResource( 13 )
states/RESET/position = Vector2( 95, 112 )
states/Spawn/node = SubResource( 7 )
states/Spawn/position = Vector2( 292, 112 )
transitions = [ "Spawn", "Fire", SubResource( 11 ), "RESET", "Spawn", SubResource( 14 ), "Fire", "Dematerialize", SubResource( 16 ), "Materialize", "Fire", SubResource( 19 ), "Dematerialize", "Materialize", SubResource( 20 ) ]
start_node = "RESET"
end_node = "Dematerialize"

[sub_resource type="AnimationNodeStateMachinePlayback" id=10]

[node name="Dracula" type="Node2D"]
script = ExtResource( 4 )

[node name="Body" parent="." instance=ExtResource( 2 )]
modulate = Color( 1, 1, 1, 0 )
light_mask = 16
collision_layer = 0
collision_mask = 0

[node name="Sprite" type="Sprite" parent="Body"]
light_mask = 16
position = Vector2( 13, -28.5 )
texture = ExtResource( 1 )
hframes = 4
vframes = 5
frame = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body"]
position = Vector2( 1.5, -20 )
shape = SubResource( 2 )

[node name="Light2D" type="Light2D" parent="."]
light_mask = 16
position = Vector2( 0, -109 )
texture = ExtResource( 5 )
color = Color( 1, 1, 1, 0 )
mode = 3
range_item_cull_mask = 16
shadow_item_cull_mask = 0

[node name="CPUParticles2D" type="CPUParticles2D" parent="Light2D"]
light_mask = 0
position = Vector2( 0, 66 )
emitting = false
amount = 64
randomness = 0.5
lifetime_randomness = 0.5
local_coords = false
emission_shape = 2
emission_rect_extents = Vector2( 12, 1 )
direction = Vector2( 0, -1 )
initial_velocity = 80.0
linear_accel = -25.0
linear_accel_random = 0.37
scale_amount = 1.25
scale_amount_random = 1.0
color_ramp = SubResource( 23 )

[node name="Head" type="RigidBody2D" parent="."]
position = Vector2( 0, 8 )
collision_layer = 0
collision_mask = 0
mode = 1
physics_material_override = SubResource( 21 )
gravity_scale = 2.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Head"]
shape = SubResource( 1 )

[node name="Hitbox" parent="Head" instance=ExtResource( 2 )]
position = Vector2( 0, 47 )
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Head/Hitbox"]
position = Vector2( 0, -47 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Head"]
light_mask = 0
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 176, 64, 16, 16 )

[node name="Enemy" type="Node" parent="."]
script = ExtResource( 3 )
enemyName = "Dracula"
damage = 4
weakHits = 24
strongHits = 16
hitbox = NodePath("../Head/Hitbox")
deathBehavior = 2

[node name="FirePosition" type="Position2D" parent="."]
position = Vector2( 1, -27 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Spawn"
anims/Dematerialize = SubResource( 12 )
anims/Dissolve = SubResource( 22 )
anims/Fire = SubResource( 5 )
anims/Materialize = SubResource( 17 )
anims/RESET = SubResource( 4 )
anims/Spawn = SubResource( 3 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 9 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 10 )

[connection signal="hit" from="Body" to="." method="_on_Body_hit"]
[connection signal="hit_simon" from="Body" to="." method="_on_Body_hit_simon"]
[connection signal="damaged" from="Enemy" to="." method="_on_Enemy_damaged"]
[connection signal="killed" from="Enemy" to="." method="_on_Enemy_killed"]
